--- a/front/views/board/category/boardList.html
+++ b/front/views/board/category/boardList.html
@@ -41,8 +41,6 @@
                     <!-- 상단 고정 부분 -->
                     <div class="top">
                         <h1>전체글 ({{listCount}}개)</h1>
-                        <a href="/board/write">글쓰기</a>
-                        <!-- <button href="/board/write">글쓰기</button> -->
                     </div>
 
                     <!-- ALL DATA IN LIST PAGE -->
@@ -96,6 +94,9 @@
                                     <a><button class="listPagingNext">다음</button></a>
                                 </li>
                             </ul>
+                            <div class="writeWrap">
+                                <a id="doWrite" href="/board/write">글쓰기</a>
+                            </div>
                         </div>
                     </div>
                 </div>
