--- a/front/views/index.html
+++ b/front/views/index.html
@@ -71,7 +71,7 @@
                                     <div class="function_box">
                                         <div class="liked_box">
                                             <i class="fa-solid fa-heart"></i>
-                                            <div>429</div>
+                                            <div>{{board.liked}}</div>
                                         </div>
                                         <div class="hit_box">
                                             <i class="fa-sharp fa-solid fa-eye"></i>
