--- a/front/public/css/board/boardList.css
+++ b/front/public/css/board/boardList.css
@@ -109,6 +109,7 @@ article {
     height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: space-between;
 }
 
 .boardListContents > .boardFindOne > .boardListContent > ul > .subject {
