--- a/front/public/css/user/profileEdit.css
+++ b/front/public/css/user/profileEdit.css
@@ -1,5 +1,11 @@
+body {
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/profileback.jpg) 10% no-repeat;
+    background-size: cover;
+}
+
 section {
     width: 100%;
+    margin: 10rem auto;
 }
 
 .profileEdit {
@@ -85,21 +91,29 @@ section {
 }
 
 .profileEditContentBox {
-    margin: 0.5rem 5rem;
     font-size: 1.6rem;
-    font-weight: 700;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .profileEditContentBox > div {
-    margin: 0 1rem;
+
 }
 
 .profileEditContentBox > input {
     margin: 0 3rem;
     width: 60%;
     border: 0.1rem solid var(--border);
+}
+
+#addressNumber {
+    display: flex;
+
+}
+
+#addressInfo {
+    display: flex;
 }
 
 .profileEditContentsRight {
@@ -154,4 +168,252 @@ section {
     border-radius: 0.5rem;
     border: none;
     background-color: var(--header);
+}
+
+.adminWrap {
+    display: flex;
+    align-items: center;
+    position: relative;
+    min-width: 180rem;
+    min-height: 120rem;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/profileback.jpg) 10% no-repeat;
+    background-size: cover;
+}
+
+#profileWrap {
+    position: relative;
+    width: 120rem;
+    height: 90rem;
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/note.jpg) 10% no-repeat;
+    background-size: cover;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+}
+
+.profileWrap {
+    margin: 0 auto;
+    width: 90%;
+    height: 100%;
+}
+
+#profileHeader {
+    width: 100%;
+    height: 18rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#profileHeader > h1 {
+    font-size: 3.6rem;
+    font-weight: 700;
+}
+
+#profileHeader > p {
+    padding-left: 4rem;
+    font-size: 1.6rem;
+    margin-top: 2.5rem;
+    font-weight: 160;
+}
+
+#profileBody {
+    width: 100%;
+    height: 60rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.profileBox {
+    width: 42.5%;    
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.profileBox > div {
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
+    background-color: var(--main);
+}
+
+.profileBox > div > h2 {
+    padding: 2rem;
+    font-size: 2.5rem;
+    box-sizing: border-box;
+}
+
+#profileBox1{
+    width: 100%;
+    height: 34%;
+    display: flex;
+}
+
+#avatarWrap {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#avatarWrap > img {
+    height: 80%;
+    border-radius: 50%;
+    border: 1px solid var(--border);
+}
+
+#avatarController {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#avatarController > div {
+    text-align: center;
+    padding: 1rem;
+    width: 80%;
+    font-size: 2rem;
+    box-sizing: border-box;
+}
+
+#avatarController > input {
+    width: 80%;
+    border: none;
+}
+
+/* #avatarController > button {
+    padding: 1rem;
+    width: 80%;
+    font-weight: 700;
+    font-size: 1.6rem;
+    color: var(--main);
+    background-color: var(--header);
+    border: none;
+    box-sizing: border-box;
+    border-radius: 0.5rem;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+}
+
+#avatarController > button:hover {
+    background-color: var(--footer);
+} */
+
+#profileBox2{
+    width: 100%;
+    height: 60%;
+}
+
+#profileBox2 > h2 {
+    height: 25%;
+}
+
+#profileBox2 > div {
+    height: 75%;
+    padding: 2rem;
+    box-sizing: border-box;
+}
+
+.profileContent {
+    margin: 0.5rem 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.profileContentName {
+    width: 12.5rem;
+    font-size: 2rem;
+}
+
+.profileContentInfo {
+    width: 75%;
+    padding: 0.5rem 1rem;
+    border: none;
+    background-color: #dedede;
+    border-radius: 0.3rem;
+    box-sizing: border-box;
+}
+
+.profileContentInfo:nth-child(3){
+    background-color: black;
+}
+
+#profileBox3{
+    width: 100%;
+    height: 42%;
+}
+
+#profileBox3 > h2 {
+    height: 25%;
+}
+
+#profileBox3 > div {
+    height: 75%;
+    padding: 2rem;
+    box-sizing: border-box;
+}
+
+#profileBox4{
+    width: 100%;
+    height: 52%;
+}
+
+#profileBox4 > h2 {
+    height: 25%;
+}
+
+.profileContentInfoWrap {
+    width: 100%;
+    height: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#profileBox4 > .profileContentInfoWrap > .profileContentInfo {
+    width: 70%;
+    height: 80%;
+    padding: 0.5rem 1rem;
+    border: none;
+    background-color: #dedede;
+    border-radius: 0.3rem;
+    box-sizing: border-box;
+}
+
+
+#profileFooter {
+    width: 100%;
+    height: 12rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#profileUpdateBtn {
+    text-align: center;
+    line-height: 3rem;
+    width: 20rem;
+    height: 4.5rem;
+    margin: 1rem auto;
+    border: none;
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+    color: var(--main);
+    background-color: var(--header);
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+    transition: all 0.3s;
+}
+
+#profileUpdateBtn:hover {
+    background-color: var(--footer);
 }
