--- a/front/views/board/category/boardList.html
+++ b/front/views/board/category/boardList.html
@@ -19,16 +19,16 @@
                 <div class="listLeft">
                     <ul>
                         <li class="allCategory">
-                            <h3><a href="#">전체보기</a></h3>
+                            <h3><a href="/board/list?page=1">전체보기</a></h3>
                             <span></span>
                         </li>
                         <!-- 카테고리 템플릿 -->
                         {% for item in mainCategory %}
                         <li class="mainCategory">
-                            <h4><a href="#">{{item.mainName}}</a></h4>
+                            <h4><a href="/search?category={{item.mainName}}">{{item.mainName}}</a></h4>
                             <ul class="subCategory">
                                 {%for sub in subCategory%} {%if item.mainName === sub.mainName%}
-                                <li><a href="#">{{sub.subName}}</a></li>
+                                <li><a href="/search?category={{sub.subName}}">{{sub.subName}}</a></li>
                                 {%endif%} {% endfor %}
                             </ul>
                         </li>
