--- a/front/views/search/searchList.html
+++ b/front/views/search/searchList.html
@@ -49,6 +49,28 @@
                             <td class="per10">{{item.hit}}</td>
                         </tr>
                         {%endfor%}
+                        {% for item in mainName %}
+                        <tr>
+                            <td class="per10">{{item.id}}</td>
+                            <td class="title per40">
+                                <a href="/board/view?id={{item.id}}">{{item.subject}}</a>
+                            </td>
+                            <td class="per20">{{item.userid}}</td>
+                            <td class="per20">{{item.createAt}}</td>
+                            <td class="per10">{{item.hit}}</td>
+                        </tr>
+                        {%endfor%}
+                        {% for item in subName %}
+                        <tr>
+                            <td class="per10">{{item.id}}</td>
+                            <td class="title per40">
+                                <a href="/board/view?id={{item.id}}">{{item.subject}}</a>
+                            </td>
+                            <td class="per20">{{item.userid}}</td>
+                            <td class="per20">{{item.createAt}}</td>
+                            <td class="per10">{{item.hit}}</td>
+                        </tr>
+                        {%endfor%}
                         {% for item in hash %}
                         <tr>
                             <td class="per10">{{item.id}}</td>
